--- a/src/components/SliderCalendar/SliderCalendar.module.css
+++ b/src/components/SliderCalendar/SliderCalendar.module.css
@@ -14,3 +14,10 @@
 .SliderCalendar__slide {
   padding-bottom: 24px;
 }
+
+.SliderCalendar__month {
+  margin-top: 0;
+}
+.SliderCalendar__year {
+  color: var(--ion-color-medium);
+}
