--- a/src/components/CardSingleDay/CardSingleDay.module.css
+++ b/src/components/CardSingleDay/CardSingleDay.module.css
@@ -11,7 +11,8 @@
 }
 
 .CardSingleDay__isActive {
-  background-color: var(--ion-color-secondary);
+  background-color: var(--ion-color-light);
+  /* box-shadow: 0px 10px 9px -10px rgba(0, 0, 0, 0.1); */
 }
 
 .CardSingleDay__IonBadge {
