--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -10,28 +10,26 @@ p {
 
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary: #2dc47d;
+  --ion-color-primary-rgb: 45, 196, 125;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0, 0, 0;
+  --ion-color-primary-shade: #28ac6e;
+  --ion-color-primary-tint: #42ca8a;
 
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary: #36ffa0;
+  --ion-color-secondary-rgb: 54, 255, 160;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0, 0, 0;
+  --ion-color-secondary-shade: #30e08d;
+  --ion-color-secondary-tint: #4affaa;
 
-  /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
+  --ion-color-tertiary: #008a94;
+  --ion-color-tertiary-rgb: 0, 138, 148;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+  --ion-color-tertiary-shade: #007982;
+  --ion-color-tertiary-tint: #1a969f;
 
   /** success **/
   --ion-color-success: #2dd36f;
@@ -80,6 +78,55 @@ p {
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-red: #ff2424;
+  --ion-color-red-rgb: 255, 36, 36;
+  --ion-color-red-contrast: #ffffff;
+  --ion-color-red-contrast-rgb: 255, 255, 255;
+  --ion-color-red-shade: #e02020;
+  --ion-color-red-tint: #ff3a3a;
+
+  --ion-color-orange: #fd8c1c;
+  --ion-color-orange-rgb: 253, 140, 28;
+  --ion-color-orange-contrast: #000000;
+  --ion-color-orange-contrast-rgb: 0, 0, 0;
+  --ion-color-orange-shade: #df7b19;
+  --ion-color-orange-tint: #fd9833;
+
+  --ion-color-yellow: #ffff14;
+  --ion-color-yellow-rgb: 255, 255, 20;
+  --ion-color-yellow-contrast: #000000;
+  --ion-color-yellow-contrast-rgb: 0, 0, 0;
+  --ion-color-yellow-shade: #e0e012;
+  --ion-color-yellow-tint: #ffff2c;
+
+  --ion-color-green: #00ff40;
+  --ion-color-green-rgb: 0, 255, 64;
+  --ion-color-green-contrast: #000000;
+  --ion-color-green-contrast-rgb: 0, 0, 0;
+  --ion-color-green-shade: #00e038;
+  --ion-color-green-tint: #1aff53;
+
+  --ion-color-sky: #00bfff;
+  --ion-color-sky-rgb: 0, 191, 255;
+  --ion-color-sky-contrast: #000000;
+  --ion-color-sky-contrast-rgb: 0, 0, 0;
+  --ion-color-sky-shade: #00a8e0;
+  --ion-color-sky-tint: #1ac5ff;
+
+  --ion-color-blue: #0040ff;
+  --ion-color-blue-rgb: 0, 64, 255;
+  --ion-color-blue-contrast: #ffffff;
+  --ion-color-blue-contrast-rgb: 255, 255, 255;
+  --ion-color-blue-shade: #0038e0;
+  --ion-color-blue-tint: #1a53ff;
+
+  --ion-color-purple: #4000ff;
+  --ion-color-purple-rgb: 64, 0, 255;
+  --ion-color-purple-contrast: #ffffff;
+  --ion-color-purple-contrast-rgb: 255, 255, 255;
+  --ion-color-purple-shade: #3800e0;
+  --ion-color-purple-tint: #531aff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -89,26 +136,26 @@ p {
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66, 140, 255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary: #2dc47d;
+    --ion-color-primary-rgb: 45, 196, 125;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0, 0, 0;
+    --ion-color-primary-shade: #28ac6e;
+    --ion-color-primary-tint: #42ca8a;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80, 200, 255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary: #36ffa0;
+    --ion-color-secondary-rgb: 54, 255, 160;
+    --ion-color-secondary-contrast: #000000;
+    --ion-color-secondary-contrast-rgb: 0, 0, 0;
+    --ion-color-secondary-shade: #30e08d;
+    --ion-color-secondary-tint: #4affaa;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106, 100, 255;
+    --ion-color-tertiary: #008a94;
+    --ion-color-tertiary-rgb: 0, 138, 148;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+    --ion-color-tertiary-shade: #007982;
+    --ion-color-tertiary-tint: #1a969f;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47, 223, 117;
@@ -151,6 +198,118 @@ p {
     --ion-color-light-contrast-rgb: 255, 255, 255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    --ion-color-red: #ff2424;
+    --ion-color-red-rgb: 255, 36, 36;
+    --ion-color-red-contrast: #ffffff;
+    --ion-color-red-contrast-rgb: 255, 255, 255;
+    --ion-color-red-shade: #e02020;
+    --ion-color-red-tint: #ff3a3a;
+
+    --ion-color-orange: #fd8c1c;
+    --ion-color-orange-rgb: 253, 140, 28;
+    --ion-color-orange-contrast: #000000;
+    --ion-color-orange-contrast-rgb: 0, 0, 0;
+    --ion-color-orange-shade: #df7b19;
+    --ion-color-orange-tint: #fd9833;
+
+    --ion-color-yellow: #ffff14;
+    --ion-color-yellow-rgb: 255, 255, 20;
+    --ion-color-yellow-contrast: #000000;
+    --ion-color-yellow-contrast-rgb: 0, 0, 0;
+    --ion-color-yellow-shade: #e0e012;
+    --ion-color-yellow-tint: #ffff2c;
+
+    --ion-color-green: #00ff40;
+    --ion-color-green-rgb: 0, 255, 64;
+    --ion-color-green-contrast: #000000;
+    --ion-color-green-contrast-rgb: 0, 0, 0;
+    --ion-color-green-shade: #00e038;
+    --ion-color-green-tint: #1aff53;
+
+    --ion-color-sky: #00bfff;
+    --ion-color-sky-rgb: 0, 191, 255;
+    --ion-color-sky-contrast: #000000;
+    --ion-color-sky-contrast-rgb: 0, 0, 0;
+    --ion-color-sky-shade: #00a8e0;
+    --ion-color-sky-tint: #1ac5ff;
+
+    --ion-color-blue: #0040ff;
+    --ion-color-blue-rgb: 0, 64, 255;
+    --ion-color-blue-contrast: #ffffff;
+    --ion-color-blue-contrast-rgb: 255, 255, 255;
+    --ion-color-blue-shade: #0038e0;
+    --ion-color-blue-tint: #1a53ff;
+
+    --ion-color-purple: #4000ff;
+    --ion-color-purple-rgb: 64, 0, 255;
+    --ion-color-purple-contrast: #ffffff;
+    --ion-color-purple-contrast-rgb: 255, 255, 255;
+    --ion-color-purple-shade: #3800e0;
+    --ion-color-purple-tint: #531aff;
+  }
+
+  .ion-color-purple {
+    --ion-color-base: var(--ion-color-purple);
+    --ion-color-base-rgb: var(--ion-color-purple-rgb);
+    --ion-color-contrast: var(--ion-color-purple-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-purple-contrast-rgb);
+    --ion-color-shade: var(--ion-color-purple-shade);
+    --ion-color-tint: var(--ion-color-purple-tint);
+  }
+
+  .ion-color-blue {
+    --ion-color-base: var(--ion-color-blue);
+    --ion-color-base-rgb: var(--ion-color-blue-rgb);
+    --ion-color-contrast: var(--ion-color-blue-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-blue-contrast-rgb);
+    --ion-color-shade: var(--ion-color-blue-shade);
+    --ion-color-tint: var(--ion-color-blue-tint);
+  }
+
+  .ion-color-sky {
+    --ion-color-base: var(--ion-color-sky);
+    --ion-color-base-rgb: var(--ion-color-sky-rgb);
+    --ion-color-contrast: var(--ion-color-sky-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-sky-contrast-rgb);
+    --ion-color-shade: var(--ion-color-sky-shade);
+    --ion-color-tint: var(--ion-color-sky-tint);
+  }
+
+  .ion-color-green {
+    --ion-color-base: var(--ion-color-green);
+    --ion-color-base-rgb: var(--ion-color-green-rgb);
+    --ion-color-contrast: var(--ion-color-green-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-green-contrast-rgb);
+    --ion-color-shade: var(--ion-color-green-shade);
+    --ion-color-tint: var(--ion-color-green-tint);
+  }
+
+  .ion-color-yellow {
+    --ion-color-base: var(--ion-color-yellow);
+    --ion-color-base-rgb: var(--ion-color-yellow-rgb);
+    --ion-color-contrast: var(--ion-color-yellow-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-yellow-contrast-rgb);
+    --ion-color-shade: var(--ion-color-yellow-shade);
+    --ion-color-tint: var(--ion-color-yellow-tint);
+  }
+
+  .ion-color-red {
+    --ion-color-base: var(--ion-color-red);
+    --ion-color-base-rgb: var(--ion-color-red-rgb);
+    --ion-color-contrast: var(--ion-color-red-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-red-contrast-rgb);
+    --ion-color-shade: var(--ion-color-red-shade);
+    --ion-color-tint: var(--ion-color-red-tint);
+  }
+
+  .ion-color-orange {
+    --ion-color-base: var(--ion-color-orange);
+    --ion-color-base-rgb: var(--ion-color-orange-rgb);
+    --ion-color-contrast: var(--ion-color-orange-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-orange-contrast-rgb);
+    --ion-color-shade: var(--ion-color-orange-shade);
+    --ion-color-tint: var(--ion-color-orange-tint);
   }
 
   /*
